# lafez

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
scripts/: lafez-build.bat  lafez-copy-files.bat  lafez-test.bat
src/example/: CMakeLists.txt
src/example/src/: ExampleApplication.cpp  ExampleApplication.hpp  main.cpp
src/lafez-lib/: CMakeLists.txt
src/lafez-lib/assets/renderer/shaders/glsl/: fragment_shader.glsl  vertex_shader.glsl
src/lafez-lib/assets/renderer/shaders/hlsl/: pixel_shader.hlsl  vertex_shader.hlsl
src/lafez-lib/exports/: lafezlib_export.h
src/lafez-lib/lafez/: Application.cpp  Application.hpp  Lafez.hpp  lafez.cpp  lafez_pch.hpp
src/lafez-lib/lafez/core/: lafe_event.hpp  lafez_asset.hpp  lafez_event.hpp  lafez_foundation.hpp  lafez_gfx.hpp  lafez_layer.hpp  lafez_renderer.hpp  lafez_window.hpp
src/lafez-lib/lafez/core/assets/: Asset.cpp  Asset.hpp
src/lafez-lib/lafez/core/event/: ApplicationEvent.cpp  ApplicationEvent.hpp  DisposeBag.cpp  DisposeBag.hpp  Event.cpp  Event.hpp  EventCenter.cpp  EventCenter.hpp  EventSubscription.cpp  EventSubscription.hpp  KeyEvent.cpp  KeyEvent.hpp  MouseButtonEvent.cpp  MouseButtonEvent.hpp  MouseEvent.cpp  MouseEvent.hpp  MouseMoveEvent.cpp  MouseMoveEvent.hpp  WindowCloseEvent.cpp  WindowCloseEvent.hpp  WindowResizeEvent.cpp  WindowResizeEvent.hpp
src/lafez-lib/lafez/core/event/control/: DisposeBag.cpp  DisposeBag.hpp  EventCenter.cpp  EventCenter.hpp  EventSubscription.cpp  EventSubscription.hpp
src/lafez-lib/lafez/core/event/data/: Event.cpp  Event.hpp  KeyEvent.cpp  KeyEvent.hpp  MouseButtonEvent.cpp  MouseButtonEvent.hpp  MouseMoveEvent.cpp  MouseMoveEvent.hpp  MouseScrollEvent.cpp  MouseScrollEvent.hpp  WindowCloseEvent.cpp  WindowCloseEvent.hpp  WindowResizeEvent.cpp  WindowResizeEvent.hpp
src/lafez-lib/lafez/core/foundation/: Foundation.cpp  Foundation.hpp  ImGuiBackend.cpp  ImGuiBackend.hpp  Input.cpp  Input.hpp  Key.cpp  Key.hpp  Window.cpp  Window.hpp  WindowInfo.cpp  WindowInfo.hpp
src/lafez-lib/lafez/core/graphics/: Bindable.cpp  Bindable.hpp  CBuffer.hpp  Drawable.cpp  Drawable.hpp  Gfx.cpp  Gfx.hpp  Transform.cpp  Transform.hpp  VertexAttribute.cpp  VertexAttribute.hpp
src/lafez-lib/lafez/core/layers/: Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp
src/lafez-lib/lafez/core/layers/impl/: ImGuiLayer.cpp  ImGuiLayer.hpp
src/lafez-lib/lafez/core/renderer/: Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  RendererBackend.cpp  RendererBackend.hpp  Shader.cpp  Shader.hpp  VertexArray.cpp  VertexArray.hpp
src/lafez-lib/lafez/core/window/: Window.cpp  Window.hpp
src/lafez-lib/lafez/misc/: BadFileException.cpp  BadFileException.hpp  Exception.cpp  Exception.hpp  RuntimeException.cpp  RuntimeException.hpp  lafez_exception.hpp
src/lafez-lib/lafez/utils/: Log.cpp  Log.hpp  log.cpp  log.hpp
src/lafez-lib/src/: lafez.cpp  lafez.hpp
src/lafez-lib/src/utils/: log.cpp  log.hpp
src/lafez-test/: CMakeLists.txt  lafez-test.cpp  lafez_test.cpp
src/lafez-test/core-test/: event_test.hpp  event_tests.hpp  foundation_tests.hpp  layer_tests.hpp  renderer_tests.hpp
src/lafez-test/core-test/event/: ApplicationEventTest.hpp  EventControlTest.hpp  KeyEventTest.hpp  mouse_event_test.hpp
src/lafez-test/core-test/foundation/mnl-mocks/: ImGuiBackendMock.hpp  InputMock.hpp  WindowMock.hpp
src/lafez-test/core-test/foundation/tests/: ImGuiBackendTest.hpp  InputTest.hpp  WindowTest.hpp
src/lafez-test/core-test/layers/mnl-mocks/: ConsumingLayer.hpp  NonConsumingLayer.hpp
src/lafez-test/core-test/layers/tests/: LayerStackTest.hpp
src/lafez-test/core-test/renderer/mnl-mocks/: RendererBackendMock.hpp
src/lafez-test/core-test/renderer/tests/: BufferTest.hpp  ShaderTest.hpp  VertexArrayTest.hpp
